--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -9,6 +9,7 @@ jobs:
   build-and-deploy:
     name: Build and Deploy Docker Image
     runs-on: ubuntu-latest
+    container: amazon/aws-cli
 
     env:
       CLUSTER_NAME: main-esc-cluster
@@ -42,4 +43,4 @@ jobs:
             --cluster ${{ env.CLUSTER_NAME }} \
             --service ${{ env.SERVICE_NAME }} \
             --force-new-deployment \
-            --container-image-overrides containerName=${{ env.SERVICE_NAME }},image=${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:${{ github.sha }}
+            aws ecs update-service --cluster $CLUSTER_NAME --service $RDS_SERVICE_NAME --force-new-deployment
