--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -9,7 +9,6 @@ jobs:
   build-and-deploy:
     name: Build and Deploy Docker Image
     runs-on: ubuntu-latest
-    container: amazon/aws-cli
 
     env:
       CLUSTER_NAME: main-esc-cluster
@@ -18,6 +17,12 @@ jobs:
       ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
 
     steps:
+
+      - name: Install AWS CLI
+      - run: |
+          - sudo apt-get update
+          - sudo apt-get install -y awscli
+
       - name: Checkout code
         uses: actions/checkout@v3
 
