--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Install AWS CLI
-      - run: |
+        run: |
           - sudo apt-get update
           - sudo apt-get install -y awscli
 
