--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -19,8 +19,8 @@ jobs:
     steps:
       - name: Install AWS CLI
         run: |
-          - sudo apt-get update
-          - sudo apt-get install -y awscli
+          sudo apt-get update
+          sudo apt-get install -y awscli
 
       - name: Checkout code
         uses: actions/checkout@v3
