--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -52,6 +52,6 @@ jobs:
         run: |
           aws ecs update-service \
               --cluster ${{ env.CLUSTER_NAME }} \
-              --service ${{ env.SERVICE_NAME }} \
+              --service ${{ env.RDS_SERVICE_NAME }} \
               --force-new-deployment \
-              --container-image-overrides containerName=${{ env.SERVICE_NAME }},image=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+              --container-image-overrides containerName=${{ env.RDS_SERVICE_NAME }},image=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
