--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Fetch current task definition
         run: |
           aws ecs describe-task-definition \
-            --task-definition rds \
+            --task-definition main-task-definition \
             --query taskDefinition \
             --output json > task-definition.json
 
