--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -45,7 +45,15 @@ jobs:
 
       - name: Download task definition
         run: |
-          aws ecs describe-task-definition - task-definition main-task-definition - query taskDefinition > task-definition.json
+          aws ecs describe-task-definition \
+            --task-definition main-task-definition \
+            --query taskDefinition \
+            --output json > task-definition.json
+
+      - name: Debug task definition
+        run: |
+          echo "Task definition content:"
+          cat task-definition.json
 
       - name: Fill in new image ID in task definition
         id: task-def
