--- a/.github/workflows/rds_service_cicd.yml
+++ b/.github/workflows/rds_service_cicd.yml
@@ -1,10 +1,10 @@
-name: CI/CD for ECS and ECR
+name: CI/CD for rds_backend - ECS and ECR
 
 on:
   push:
     paths:
       - 'backend_rds/**'
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
