--- a/.github/workflows/redis-service-cicd.yml
+++ b/.github/workflows/redis-service-cicd.yml
@@ -38,8 +38,8 @@ jobs:
       # 4. Build & Push Docker image
       - name: Build & Push Docker image
         run: |
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:${{ github.sha }} backend_redis -f backend_redis/Dockerfile
-          docker push ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:${{ github.sha }}
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/repo/redis:${{ github.sha }} backend_redis -f backend_redis/Dockerfile
+          docker push ${{ steps.login-ecr.outputs.registry }}//repo/redis:${{ github.sha }}
 
        # 5. Download task definition
       - name: Download task definition
